# django-bakery

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.textile  MANIFEST  MANIFEST.in  Makefile  Pipfile  README.md  README.textile  core_requirements.in  core_requirements.txt  dev_requirements.in  dev_requirements.txt  models.py  pyproject.toml  quicktest.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: continuous-deployment.yaml  docs.yaml
bakery/: __init__.py  apps.py  feeds.py  models.py  s3_utils.py  static_urls.py  static_views.py  tasks.py  tests.py  views.py
bakery/management/commands/: __init__.py  build.py  buildserver.py  publish.py  unbuild.py  unpublish.py
bakery/tests/: __init__.py  apps.py  models.py  run_django_tests.py  test_settings.py  urls.py  views.py
bakery/tests/static/: robots.txt
bakery/tests/static_root_for_tests/: foo.bar  test.css
bakery/tests/templates/: 404.html  jsonview.json  templateview.html  yearview.html
bakery/views/: __init__.py  base.py  dates.py  detail.py  list.py
docs/: Makefile  buildablefeeds.md  buildablefeeds.rst  buildablemodels.md  buildablemodels.rst  buildableviews.md  buildableviews.rst  celeryintegration.rst  changelog.md  changelog.rst  commonchallenges.md  commonchallenges.rst  conf.py  credits.md  credits.rst  gettingstarted.md  gettingstarted.rst  index.md  index.rst  make.bat  managementcommands.md  managementcommands.rst  mkdocs.yaml  requirements.txt  settingsvariables.md  settingsvariables.rst
docs/_build/doctrees/: buildablefeeds.doctree  buildablemodels.doctree  buildableviews.doctree  celeryintegration.doctree  changelog.doctree  commonchallenges.doctree  credits.doctree  environment.pickle  gettingstarted.doctree  index.doctree  managementcommands.doctree  settingsvariables.doctree
docs/_build/html/: .buildinfo  buildablefeeds.html  buildablemodels.html  buildableviews.html  celeryintegration.html  changelog.html  commonchallenges.html  credits.html  genindex.html  gettingstarted.html  index.html  managementcommands.html  objects.inv  search.html  searchindex.js  settingsvariables.html
docs/_build/html/_sources/: buildablefeeds.txt  buildablemodels.rst.txt  buildablemodels.txt  buildableviews.rst.txt  buildableviews.txt  changelog.rst.txt  changelog.txt  commonchallenges.txt  credits.md.txt  credits.rst.txt  credits.txt  gettingstarted.txt  index.md.txt  index.rst.txt  index.txt  managementcommands.rst.txt  managementcommands.txt  settingsvariables.rst.txt  settingsvariables.txt
docs/_static/css/: custom.css
docs/_templates/: nav.html
example/: db.sqlite3  manage.py
example/date_views/: admin.py  apps.py  models.py  views.py
example/date_views/fixtures/: initial_data.json
example/date_views/migrations/: 0001_initial.py  0002_auto_20170828_1921.py  0003_auto_20170828_1921.py
example/date_views/templates/date_views/: article_archive.html  article_archive_day.html  article_archive_month.html  article_archive_year.html
example/project/: settings.py  urls.py
management/: build.py  publish.py  unpublish.py
management/commands/: build.py  buildserver.py
